<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register_user.RegisterUserFragment">

    <LinearLayout
        android:id="@+id/form_top"
        style="@style/FormTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@+id/title"
            style="@style/FormTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_invoice_registration"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_below="@id/form_top"
        android:layout_above="@id/buttons_form">
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_search_invoice_company"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/companies_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
            android:visibility="gone"
            tools:visibility="visible"
            tools:listitem="@layout/simple_item"
            tools:itemCount="3"/>
        <TextView
            android:id="@+id/company_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            tools:text="Empresa selecionada"
            android:textAlignment="center"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/form_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_name"
                android:hint="@string/prompt_invoice_value"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_company_identify"
                android:hint="@string/prompt_invoice_number"
                android:inputType="phone"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_company_name"
                android:hint="@string/prompt_invoice_month"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_company_name"
                android:hint="@string/prompt_invoice_received"
                android:inputType="phone"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_company_name"
                android:hint="@string/prompt_invoice_description"
                android:inputType="textMultiLine"
                android:lines="3"
                android:selectAllOnFocus="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp">

        <Button
            android:id="@+id/remove_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/red"
            android:text="@string/button_delete"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/button_save" />

    </LinearLayout>

</RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>