<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register_user.RegisterUserFragment"
    android:layout_gravity="center_vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/form_top"
        style="@style/FormTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/title"
            style="@style/FormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_user_registration"  />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/data_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttons_form"
            android:layout_below="@id/form_top"
            android:orientation="vertical">

            <LinearLayout
                style="@style/FormContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FormSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Informações de acesso" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_email"
                    android:enabled="false"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/password_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/prompt_password_repeat"
                    android:hint="@string/prompt_password_repeat"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FormSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Outras Informações" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_name"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/company_identify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_company_identify"
                    android:hint="@string/prompt_company_identify"
                    android:inputType="phone"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_company_name"
                    android:hint="@string/prompt_company_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_company_name"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginHorizontal="4dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:enabled="false"/>

    </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>